unpackaged/main/default/objects/Fund_Allocation__c/fields/Actual_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expenses__c</fullName>
    <inlineHelpText>Sum of the Amounts of child &#39;Contributing Fund&#39; records related to grants with Status = Approved Pending GA, Awarded, Active Grant, Grant Closed, Grant Closed Unsatisfactorily. Set via DLRS action called &quot;Sched Actual Exp to Fund Allocation&quot;.</inlineHelpText>
    <label>Actual Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>