unpackaged/main/default/objects/Fund_Allocation__c/fields/Age_Focus__c.field-meta.xml
<CustomField>
    <fullName>Age_Focus__c</fullName>
    <inlineHelpText>Age Focus restriction set by the donor for this money. Used in &quot;Create Contributing Funds&quot; visual force page to match with grants with the same Age Focus.</inlineHelpText>
    <label>Age Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Infants &amp; Children to 9</fullName>
            </value>
            <value>
                <fullName>Adolescents 10 to 19</fullName>
            </value>
            <value>
                <fullName>Young Adults Under 35</fullName>
            </value>
            <value>
                <fullName>Adults Over 35</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>