unpackaged/main/default/objects/Fund_Allocation__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>No longer used. Total Amount on Fund Allocation is &quot;fed&quot; by the Grantmaking Amount on GAU Allocations associated with them. If you need to manually change the Total Amount on the  FA use &quot;Fund Allocation Adjustment&quot; (see related list tab).</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>