unpackaged/main/default/objects/Fund_Allocation__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Allows relating FA to an FC budget. When an FA is tied to a budget the &#39;Create Contributing Funds&#39; VFP will match the FA with grants tied to the same budget (via grant payments) or to child budgets of the assigned budget (i.e. if is budget is Dep budget).</inlineHelpText>
    <label>Budget</label>
    <referenceTo>Budget</referenceTo>
    <relationshipLabel>Fund Allocations</relationshipLabel>
    <relationshipName>Fund_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>