unpackaged/main/default/objects/Fund_Allocation__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <inlineHelpText>Content restriction set by the donor for this money. Used in &quot;Create Contributing Funds&quot; visual force page to match with grants with the same Content.</inlineHelpText>
    <label>Content</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access To Justice</fullName>
            </value>
            <value>
                <fullName>Bodily Diversity</fullName>
            </value>
            <value>
                <fullName>Children&#39;s Rights</fullName>
            </value>
            <value>
                <fullName>Civic &amp; Political Participation</fullName>
            </value>
            <value>
                <fullName>Compensation &amp; Restitution</fullName>
            </value>
            <value>
                <fullName>Cultural Rights</fullName>
            </value>
            <value>
                <fullName>Disability Rights</fullName>
            </value>
            <value>
                <fullName>Disaster Relief</fullName>
            </value>
            <value>
                <fullName>Disaster Risk Reduction</fullName>
            </value>
            <value>
                <fullName>Early Marriage</fullName>
            </value>
            <value>
                <fullName>Economic Justice &amp; Development - Labor Rights</fullName>
            </value>
            <value>
                <fullName>Economic Justice &amp; Development - Livelihoods</fullName>
            </value>
            <value>
                <fullName>Economic Justice &amp; Development - Microfinance</fullName>
            </value>
            <value>
                <fullName>Economic Justice &amp; Development - Other</fullName>
            </value>
            <value>
                <fullName>Economic Justice &amp; Development - Vocational Training</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Equality Rights &amp; Freedom From Stigma &amp; Discrimination</fullName>
            </value>
            <value>
                <fullName>Freedom From Violence</fullName>
            </value>
            <value>
                <fullName>Freedom Of Expression &amp; Information</fullName>
            </value>
            <value>
                <fullName>Gender Equality</fullName>
            </value>
            <value>
                <fullName>Gender Identity &amp; Expression</fullName>
            </value>
            <value>
                <fullName>Governance &amp; Accountability</fullName>
            </value>
            <value>
                <fullName>Health - Abortion Rights</fullName>
            </value>
            <value>
                <fullName>Health - HIV/AIDS</fullName>
            </value>
            <value>
                <fullName>Health - Maternal and Child Health</fullName>
            </value>
            <value>
                <fullName>Health - Other</fullName>
            </value>
            <value>
                <fullName>Health - Psychosocial Support</fullName>
            </value>
            <value>
                <fullName>Health - Reproductive Health &amp; Rights</fullName>
            </value>
            <value>
                <fullName>Health - Sexual Health</fullName>
            </value>
            <value>
                <fullName>Infrastructure Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>