unpackaged/main/default/objects/Fund_Allocation__c/fields/Donation__c.field-meta.xml
<CustomField>
    <fullName>Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup/link to the Donation record that is the source of this Fund Allocation. Use the Not Applicable Account&#39;s donation (SFID: 0064100000Cta36AAB) if this an FA for rolling-up revenue from multiple donations (e.g. donations for Humanitarian Response).</inlineHelpText>
    <label>Donation</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Fund Allocations</relationshipLabel>
    <relationshipName>Fund_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>