unpackaged/main/default/objects/Fund_Allocation__c/fields/Donor_Code__c.field-meta.xml
<CustomField>
    <fullName>Donor_Code__c</fullName>
    <formula>IF(
  ISBLANK(Donor_Code_Override__c),
  Donation__r.Account_Name__c,
  Donor_Code_Override__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unless &quot;Donor Code Override&quot; is populated, will default to the &#39;Donor Code&#39; for the Donor on the Donation related to this FA (see &quot;Donation&quot; field).</inlineHelpText>
    <label>Donor Code</label>
    <type>Text</type>
</CustomField>