unpackaged/main/default/objects/Fund_Allocation__c/fields/Donor_Code_Override__c.field-meta.xml
<CustomField>
    <fullName>Donor_Code_Override__c</fullName>
    <inlineHelpText>Use to override &quot;Donor Code&quot; field on this FA record.</inlineHelpText>
    <label>Donor Code Override</label>
    <length>4</length>
    <type>Text</type>
</CustomField>