unpackaged/main/default/objects/Fund_Allocation__c/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <formula>if(NOT(ISBLANK( Donor_Name_Override__c)),Donor_Name_Override__c, if (Donor_Code__c = &quot;9999&quot;, &quot;Not Applicable&quot; , Donation__r.Account_Name__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1. If &quot;Donor Name Override&quot; is populated than &quot;Donor Name Override&quot; 2. Otherwise, if Donor Code = 9999 than sets to &quot;Not Applicable&quot; 3. Otherwise, sets to Account Name on Donation related to this FA (see &quot;Donation&quot; field).</inlineHelpText>
    <label>Donor Name</label>
    <type>Text</type>
</CustomField>