unpackaged/main/default/objects/Fund_Allocation__c/fields/Donor_Name_Override__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name_Override__c</fullName>
    <inlineHelpText>Use to override the &quot;Donor Name&quot; field on this record.</inlineHelpText>
    <label>Donor Name Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>