unpackaged/main/default/objects/Fund_Allocation__c/fields/End_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>End_Beneficiary__c</fullName>
    <inlineHelpText>End Beneficiary restriction set by the donor for this money. Used in &quot;Create Contributing Funds&quot; visual force page to match with grants with the same End Beneficiary.</inlineHelpText>
    <label>End Beneficiary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Children of Sex Workers</fullName>
            </value>
            <value>
                <fullName>Civil Society Organizations</fullName>
            </value>
            <value>
                <fullName>Ethnic Minorities</fullName>
            </value>
            <value>
                <fullName>Farmers, Fisherfolk, Pastoralists, Foresters</fullName>
            </value>
            <value>
                <fullName>General Population</fullName>
            </value>
            <value>
                <fullName>Human Rights Defenders at Risk</fullName>
            </value>
            <value>
                <fullName>Incarcerated Persons</fullName>
            </value>
            <value>
                <fullName>Indigenous Peoples</fullName>
            </value>
            <value>
                <fullName>Internally Displaced Persons</fullName>
            </value>
            <value>
                <fullName>Laborers in the Informal Economy</fullName>
            </value>
            <value>
                <fullName>LGB</fullName>
            </value>
            <value>
                <fullName>LGB - LB</fullName>
            </value>
            <value>
                <fullName>LGB - Lesbian</fullName>
            </value>
            <value>
                <fullName>Migrants</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>People with Disabilities</fullName>
            </value>
            <value>
                <fullName>PLWHA</fullName>
            </value>
            <value>
                <fullName>Refugees</fullName>
            </value>
            <value>
                <fullName>Religious Minorities</fullName>
            </value>
            <value>
                <fullName>See Gender and/or Age Codes</fullName>
            </value>
            <value>
                <fullName>Sex Workers</fullName>
            </value>
            <value>
                <fullName>Soldiers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>