unpackaged/main/default/objects/Fund_Allocation__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <inlineHelpText>Link to the parent Fund record for this Fund Allocation.</inlineHelpText>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Fund Allocations</relationshipLabel>
    <relationshipName>Fund_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>