unpackaged/main/default/objects/Fund_Allocation__c/fields/Gender_Focus__c.field-meta.xml
<CustomField>
    <fullName>Gender_Focus__c</fullName>
    <inlineHelpText>Gender Focus restriction set by the donor for this money. Used in &quot;Create Contributing Funds&quot; visual force page to match with grants with the same Gender Focus.</inlineHelpText>
    <label>Gender Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Cis</fullName>
            </value>
            <value>
                <fullName>Cis-Female</fullName>
            </value>
            <value>
                <fullName>Cis-Male</fullName>
            </value>
            <value>
                <fullName>Intersex</fullName>
            </value>
            <value>
                <fullName>Trans-Female</fullName>
            </value>
            <value>
                <fullName>Transgender</fullName>
            </value>
            <value>
                <fullName>Trans-Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>