unpackaged/main/default/objects/Fund_Allocation__c/fields/Geographical_Area_Served__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Area_Served__c</fullName>
    <inlineHelpText>Geographical Area Served restriction set by the donor for this money. Used in &quot;Create Contributing Funds&quot; visual force page to match with grants with the same Geographical Area Served.</inlineHelpText>
    <label>Geographical Area Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa (110)</fullName>
            </value>
            <value>
                <fullName>Asia (120)</fullName>
            </value>
            <value>
                <fullName>Bangladesh (214)</fullName>
            </value>
            <value>
                <fullName>Bolivia (221)</fullName>
            </value>
            <value>
                <fullName>Brazil (224)</fullName>
            </value>
            <value>
                <fullName>Burma (228)</fullName>
            </value>
            <value>
                <fullName>Burundi (229)</fullName>
            </value>
            <value>
                <fullName>Cambodia (230)</fullName>
            </value>
            <value>
                <fullName>Central African Republic C.A.R. (234)</fullName>
            </value>
            <value>
                <fullName>Chad (235)</fullName>
            </value>
            <value>
                <fullName>Colombia (238)</fullName>
            </value>
            <value>
                <fullName>Cote d&#39;Ivoire (243)</fullName>
            </value>
            <value>
                <fullName>Cross-Regional (198)</fullName>
            </value>
            <value>
                <fullName>Democratic Republic of the Congo (240)</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Dominican Republic (252)</fullName>
            </value>
            <value>
                <fullName>Ecuador (254)</fullName>
            </value>
            <value>
                <fullName>El Salvador (256)</fullName>
            </value>
            <value>
                <fullName>Ethiopia (260)</fullName>
            </value>
            <value>
                <fullName>Ghana (268)</fullName>
            </value>
            <value>
                <fullName>Guatemala (271)</fullName>
            </value>
            <value>
                <fullName>Haiti (275)</fullName>
            </value>
            <value>
                <fullName>Honduras (277)</fullName>
            </value>
            <value>
                <fullName>India (281)</fullName>
            </value>
            <value>
                <fullName>Indonesia (282)</fullName>
            </value>
            <value>
                <fullName>Kenya (292)</fullName>
            </value>
            <value>
                <fullName>Latin America &amp; The Caribbean (130)</fullName>
            </value>
            <value>
                <fullName>Liberia (303)</fullName>
            </value>
            <value>
                <fullName>Malaysia (312)</fullName>
            </value>
            <value>
                <fullName>Mexico (319)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>