unpackaged/main/default/objects/Fund_Allocation__c/fields/Grant_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Grant_Expenses__c</fullName>
    <inlineHelpText>Sum of the Amounts of child &#39;Contributing Fund&#39; records. Used in calculating the Fund Allocation&#39;s balance. Set via DLRS action called &quot;RT Fund Contrib Amt to Fund Allocation&quot;.</inlineHelpText>
    <label>Grant Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>