unpackaged/main/default/objects/Fund_Allocation__c/fields/Hold_Funds_From_Grantmaking__c.field-meta.xml
<CustomField>
    <fullName>Hold_Funds_From_Grantmaking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the Balance field is $0 so that the funds are not made available for selection to apply to grants.</inlineHelpText>
    <label>Hold Funds From Grantmaking</label>
    <type>Checkbox</type>
</CustomField>