unpackaged/main/default/objects/Fund_Allocation__c/fields/Methodology__c.field-meta.xml
<CustomField>
    <fullName>Methodology__c</fullName>
    <inlineHelpText>This is the key activity and high level focus of the gift.</inlineHelpText>
    <label>Methodology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Capacity Building for Other Orgs</fullName>
            </value>
            <value>
                <fullName>Capacity Building for Self</fullName>
            </value>
            <value>
                <fullName>Cash Transfer</fullName>
            </value>
            <value>
                <fullName>Collective Organizing</fullName>
            </value>
            <value>
                <fullName>Community Skills Building</fullName>
            </value>
            <value>
                <fullName>Conferences &amp; Convenings</fullName>
            </value>
            <value>
                <fullName>Documenting, Reporting &amp; Fact-Finding</fullName>
            </value>
            <value>
                <fullName>Facilitation of Access to Services</fullName>
            </value>
            <value>
                <fullName>Funding other Partners</fullName>
            </value>
            <value>
                <fullName>Legal Education &amp; Assistance (Paralegal)</fullName>
            </value>
            <value>
                <fullName>Monitoring Accountability</fullName>
            </value>
            <value>
                <fullName>Public Education &amp; Awareness-Raising</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Resettlement</fullName>
            </value>
            <value>
                <fullName>Service Provision - Access to Markets</fullName>
            </value>
            <value>
                <fullName>Service Provision - Emergency Relief</fullName>
            </value>
            <value>
                <fullName>Service Provision - Food Distribution</fullName>
            </value>
            <value>
                <fullName>Service Provision - Health</fullName>
            </value>
            <value>
                <fullName>Service Provision - Legal Aid</fullName>
            </value>
            <value>
                <fullName>Service Provision - Livelihoods</fullName>
            </value>
            <value>
                <fullName>Service Provision - PPE, Hygiene Kits</fullName>
            </value>
            <value>
                <fullName>Service Provision - Psychosocial Support</fullName>
            </value>
            <value>
                <fullName>Service Provision - Resettlement</fullName>
            </value>
            <value>
                <fullName>Service Provision - Sustainable Farming</fullName>
            </value>
            <value>
                <fullName>Strategic Mass Communication</fullName>
            </value>
            <value>
                <fullName>Service Provision - Community Based Food Systems</fullName>
            </value>
            <value>
                <fullName>Service Provision - Distribution of Seeds and Tools</fullName>
            </value>
            <value>
                <fullName>Service Provision - Infrastructure Development</fullName>
            </value>
            <value>
                <fullName>Service Provision - Sexual and Reproductive Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>