unpackaged/main/default/objects/Fund_Allocation__c/fields/Projected_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Projected_Expenses__c</fullName>
    <inlineHelpText>Sum of the Amounts of child &#39;Contributing Fund&#39; records related to grants with Status = Planning, Application Invited, Reopened, Program Review, Director Review, VP Review, Compliance, PC Review. Set via DLRS action: &quot;Sched Proj Exp to Fund Allocation&quot;.</inlineHelpText>
    <label>Projected Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>