unpackaged/main/default/objects/Fund_Allocation__c/fields/Responsible_PA_PO_User__c.field-meta.xml
<CustomField>
    <fullName>Responsible_PA_PO_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible PA/PO User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fund_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>