unpackaged/main/default/objects/Fund_Allocation__c/fields/Restriction__c.field-meta.xml
<CustomField>
    <fullName>Restriction__c</fullName>
    <inlineHelpText>Short description of the donor restriction/s. Will appear at the bottom of the &quot;Create Contributing Funds&quot; visual force page whenever this FA is selected by the PO.</inlineHelpText>
    <label>Restriction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>