unpackaged/main/default/objects/Fund_Allocation__c/fields/Rolled_Gifts_End__c.field-meta.xml
<CustomField>
    <fullName>Rolled_Gifts_End__c</fullName>
    <inlineHelpText>For Humanitarian Response FAs: End of the timeframe in which GAUAs with the same GL Revenue String as this FA (See Fund Allocation GLs related list to set a GL string on FA) will roll up to the FA and feed grantmaking amount into it&#39;s Total Amount.</inlineHelpText>
    <label>Rolled Gifts End</label>
    <type>Date</type>
</CustomField>