unpackaged/main/default/objects/Fund_Allocation__c/fields/Search_Description__c.field-meta.xml
<CustomField>
    <fullName>Search_Description__c</fullName>
    <inlineHelpText>Used to facilitate search.</inlineHelpText>
    <label>Search Description</label>
    <type>TextArea</type>
</CustomField>