unpackaged/main/default/objects/Fund_Allocation__c/fields/Spending_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Spending_Period_Start__c</fullName>
    <inlineHelpText>The start of the period in which this Fund Allocation needs to be spent. When using the &quot;Create Contributing Funds&quot; visual force page this FA would be matched with grants with an Award Date that&#39;s within the FA&#39;s spending period.</inlineHelpText>
    <label>Spending Period Start</label>
    <type>Date</type>
</CustomField>