unpackaged/main/default/objects/Fund_Allocation__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>IF ( 
Hold_Funds_From_Grantmaking__c = TRUE, 0, 
Amount__c + Total_Fund_Allocation_Adjustments__c +    Total_Grantmaking_Eligible_from_GAUs__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount + Total Amount from child Fund Allocation Adjustments + Total Grantmaking Amount from child GAU Allocations. This, unless &quot;Hold Funds From Grantmaking&quot; box is checked, in which case will be $0 (to prevent users from using funds before FA is ready).</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>