unpackaged/main/default/objects/Fund_Allocation__c/fields/Total_Fund_Allocation_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Total_Fund_Allocation_Adjustments__c</fullName>
    <inlineHelpText>Total sum of Amount from related Fund Allocation Adjustment records. Included in Total Amount and Balance of this FA.</inlineHelpText>
    <label>Total $ Fund Allocation Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>