unpackaged/main/default/objects/Fund_Allocation__c/fields/Total_Grantmaking_Eligible_from_GAUs__c.field-meta.xml
<CustomField>
    <fullName>Total_Grantmaking_Eligible_from_GAUs__c</fullName>
    <inlineHelpText>Total sum of &#39;Grantmaking Eligible Amounts&#39; from related GAU Allocation records (see &quot;Related Lists&quot; tab). Included in the &quot;Total Amount&quot; and &quot;Balance&quot; for this FA. Rolled-up by DLRS Action: &quot;GAU Alloc to Fund Allocations&quot;</inlineHelpText>
    <label>Total $ Grantmaking Eligible (from GAUs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>